<resources>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>


        <string name="app_name">CS3025</string>
        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="nav_header_task">Task: 3</string>
        <string name="nav_header_users">User Account</string>
        <string name="nav_header_desc">Navigation header</string>
        <string name="action_settings">Settings</string>


        <string name="menu_todo_list">To do List</string>
        <string name="menu_create_task">Create Task</string>
        <string name="menu_incoming">Incoming Tasks</string>
        <string name="menu_pending">Pending Tasks</string>
        <string name="menu_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">TodoList</string>
    <string name="menu_slideshow">Calendar</string>
    <string name="menu_tools">Settings</string>
    <string name="menu_share">Pending Tasks</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_name">"Braden"</string>
    <string name="settings_reminders">"Reminders:"</string>
    <string name="leave_house">"Leave House"</string>
    <string name="signout">"Sign Out"</string>


</resources>
