<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/menu_todo_list" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_add_box_black_24dp"
            android:title="@string/menu_create_task" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_announcement_black_24dp"
            android:title="@string/menu_incoming" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_pending" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
    </group>



</menu>
