<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.cs3025.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.cs3025.ui.todolist.TodoListFragment"
        android:label="@string/menu_todo_list"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.cs3025.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_create_task"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.cs3025.ui.tools.ToolsFragment"
        android:label="@string/menu_incoming"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.cs3025.ui.share.ShareFragment"
        android:label="@string/menu_pending"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.cs3025.ui.send.SendFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_send" />
</navigation>